--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,11 @@
     "Igor Ikeda <igorikeda@gmail.com>"
   ],
   "dependencies": {
-    "jquery": "~2.1.1",
-    "modernizr": "~2.8.1",
-    "requirejs": "~2.1.15"
+    "jquery": "~2.1.4",
+    "modernizr": "~2.8.3",
+    "requirejs": "~2.1.15",
+    "slick-carousel": "~1.5.9",
+    "jScrollPane": "~2.0.22"
   },
   "devDependencies": {
     "chai": "~3.4.2",
