--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "csscomb": "^3.1.8"
   },
   "eslintConfig": {
     "env": {
